--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.4",
     "react-firebaseui": "^3.1.2",
     "react-redux": "^5.1.1",
+    "react-firebaseui": "^3.1.2",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
