--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-firebaseui": "^3.1.2",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-slick": "^0.24.0",
+    "react-slidez": "0.0.31",
     "redux": "^4.0.1",
     "redux-firestore": "^0.7.3",
     "redux-thunk": "^2.3.0"
@@ -33,6 +36,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "firebase-tools": "^6.9.2"
+    "firebase-tools": "^6.9.2",
+    "react-alice-carousel": "^1.14.0"
   }
 }
