--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-google-maps": "^9.4.5",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-slick": "^0.24.0",
