--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "firebase": "^6.0.1",
     "moment": "^2.23.0",
     "node-sass": "^4.12.0",
+    "nuka-carousel": "^4.5.8",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-firebaseui": "^3.1.2",
