--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-google-maps": "^9.4.5",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
+    "react-responsive-carousel": "^3.1.49",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
