--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.12.0",
     "nuka-carousel": "^4.5.8",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.4",
     "react-firebaseui": "^3.1.2",
     "react-google-maps": "^9.4.5",
@@ -22,7 +23,8 @@
     "react-slidez": "0.0.31",
     "redux": "^4.0.1",
     "redux-firestore": "^0.7.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
