--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.8.4",
     "react-firebaseui": "^3.1.2",
     "react-google-maps": "^9.4.5",
+    "react-icons": "^3.7.0",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-responsive-carousel": "^3.1.49",
